# arnold

./: .gitignore  arnold_readme.txt  bugsetc.txt  file_id.diz  gpl-spanish.htm  leeme.linux  leeme.txt  new.txt  novedades.linux  readme.linux  readme.txt  whatsnew.linux  whatsnew.txt
src/: Makefile  Makefile.in  aclocal.m4  arnold.dsp  arnold.dsw  arnold.exe.manifest  arnolddll.dsp  arnoldlib.dsp  build.txt  config.mak.in  configure  configure.ac  configure.in  makefile.gba  makefile.w32  objects.mak  optimizecflags.sh  readme.txt  roms.mak
src/CONTRIB/: readme.txt
src/CVS/: Baserev  Entries  Repository
src/cpc/: amram2.c  amsdos.c  amsdos.h  amxms.c  amxms.h  arnold.c  arnold.h  asic.c  asic.h  asicdiss.c  audioevent.c  audioevent.h  autotype.c  autotype.h  bmp.c  bmp.h  cassette.c  cassette.h  cheatdb.c  cheatdb.h  cheatsys.c  cheatsys.h  config.c  config.h  cpc.c  cpc.h  cpc1.c  cpcdbg.c  cpcdefs.h  cpcglob.h  crtc.c  crtc.h  csw.c  csw.h  debugmain.c  debugmain.h  device.h  dirstuff.c  dirstuff.h  dumpym.c  (+73 more)
src/gba/: main.c
src/ifacegen/: filetool.c  filetool.h  fnp.c  fnp.h  global.h  ifacegen.c  ifacegen.h  romfn.c  romfn.h  settings.h
src/unix/: alsasound-common.c  alsasound-common.h  alsasound-mmap.c  alsasound-mmap.h  alsasound.c  alsasound.h  configfile.c  configfile.h  display.c  display.h  display_sdl.c  global.c  global.h  gtkui.c  gtkui.h  host.c  ifacegen.c  ifacegen.h  keyboard.c  keyboard_sdl.c  main.c  osssound.c  osssound.h  roms.c  roms.h  sdlsound.c  sdlsound.h  settings.c  sound.c  sound.h
src/win/: cassdlg.c  cassdlg.h  chtdb.c  chtdb.h  (+59 more)
(+259 files in other folders)
